--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 ﻿body {
+    background-color: #ffffff;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -10,15 +11,15 @@
     width: 100%;
 }
 
-    .btn-group-vertical input,
-    .btn-group-vertical label {
-        border: none;
-    }
+.btn-group-vertical input,
+.btn-group-vertical label {
+    border: none;
+}
+
 
 /*PROFİLE KARTI*/
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:600,300);
-
 .frame {
     border-radius: 2px;
     box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
@@ -41,132 +42,134 @@
     /* float: right;*/
 }
 
-    .profile .image {
-        position: relative;
-        width: 248px;
-        height: 248px;
-        margin: 0 auto;
-    }
+.profile .image {
+    position: relative;
+    width: 248px;
+    height: 248px;
+    margin: 0 auto;
+}
 
-        .profile .image .circle-1,
-        .profile .image .circle-2 {
-            position: absolute;
-            box-sizing: border-box;
-            width: 254px;
-            height: 254px;
-            top: -3px;
-            left: -3px;
-            border-width: 1px;
-            border-style: solid;
-            border-color: #786450 #786450 #786450 transparent;
-            border-radius: 50%;
-            transition: all 1.5s ease-in-out;
-        }
+.profile .image .circle-1,
+.profile .image .circle-2 {
+    position: absolute;
+    box-sizing: border-box;
+    width: 254px;
+    height: 254px;
+    top: -3px;
+    left: -3px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #786450 #786450 #786450 transparent;
+    border-radius: 50%;
+    transition: all 1.5s ease-in-out;
+}
 
-        .profile .image .circle-2 {
-            width: 260px;
-            height: 260px;
-            top: -6px;
-            left: -6px;
-            border-color: #786450 transparent #786450 #786450;
-        }
+.profile .image .circle-2 {
+    width: 260px;
+    height: 260px;
+    top: -6px;
+    left: -6px;
+    border-color: #786450 transparent #786450 #786450;
+}
 
-        .profile .image img {
-            display: block;
-            border-radius: 50%;
-            background: #f5e8df;
-            width: 100%;
-            height: 100%;
-        }
+.profile .image img {
+    display: block;
+    border-radius: 50%;
+    background: #f5e8df;
+    width: 100%;
+    height: 100%;
+}
 
-        .profile .image:hover {
-            cursor: pointer;
-        }
+.profile .image:hover {
+    cursor: pointer;
+}
 
-            .profile .image:hover .circle-1,
-            .profile .image:hover .image .circle-2,
-            .profile .image .image:hover .circle-2 {
-                transform: rotate(360deg);
-            }
+.profile .image:hover .circle-1,
+.profile .image:hover .image .circle-2,
+.profile .image .image:hover .circle-2 {
+    transform: rotate(360deg);
+}
 
-            .profile .image:hover .circle-2 {
-                transform: rotate(-360deg);
-            }
+.profile .image:hover .circle-2 {
+    transform: rotate(-360deg);
+}
 
-    .profile .name {
-        font-size: 15px;
-        font-weight: 600;
-        margin-top: 20px;
-    }
+.profile .name {
+    font-size: 15px;
+    font-weight: 600;
+    margin-top: 20px;
+}
 
-    .profile .job {
-        font-size: 11px;
-        line-height: 15px;
-        margin-bottom: 10px;
-    }
+.profile .job {
+    font-size: 11px;
+    line-height: 15px;
+    margin-bottom: 10px;
+}
 
-    .profile .actions {
-        margin-top: 33px;
-    }
+.profile .actions {
+    margin-top: 33px;
+}
 
-        .profile .actions .btn {
-            display: block;
-            width: 80px;
-            height: 30px;
-            margin: 0 auto 10px auto;
-            background: none;
-            border: 1px solid #786450;
-            border-radius: 15px;
-            font-size: 12px;
-            font-weight: 600;
-            box-sizing: border-box;
-            transition: all 0.3s ease-in-out;
-            color: #786450;
-            padding-top: 5px;
-        }
+.profile .actions .btn {
+    display: block;
+    width: 80px;
+    height: 30px;
+    margin: 0 auto 10px auto;
+    background: none;
+    border: 1px solid #786450;
+    border-radius: 15px;
+    font-size: 12px;
+    font-weight: 600;
+    box-sizing: border-box;
+    transition: all 0.3s ease-in-out;
+    color: #786450;
+    padding-top: 5px;
+}
 
-            .profile .actions .btn:hover {
-                background: #786450;
-                color: #fff;
-            }
+.profile .actions .btn:hover {
+    background: #786450;
+    color: #fff;
+}
 
 .stats {
     margin-bottom: 10px;
     margin: 0 auto;
 }
 
-    .stats .box {
-        box-sizing: border-box;
-        width: 30%;
-        min-width: 100px;
-        background: #ffffff;
-        text-align: center;
-        transition: all 0.4s ease-in-out;
-        margin-left: 10px;
-        float: left;
-    }
+.stats .box {
+    box-sizing: border-box;
+    width: 30%;
+    min-width: 100px;
+    background: #ffffff;
+    text-align: center;
+    transition: all 0.4s ease-in-out;
+    margin-left: 10px;
+    float: left;
+}
 
-        .stats .box:hover {
-            background: #324960;
-            cursor: pointer;
-            color: white;
-        }
+.stats .box:hover {
+    background: #324960;
+    cursor: pointer;
+    color: white;
+}
 
-    .stats span {
-        display: block;
-    }
+.stats span {
+    display: block;
+}
 
-    .stats .value {
-        font-size: 18px;
-        font-weight: 600;
-    }
+.stats .value {
+    font-size: 18px;
+    font-weight: 600;
+}
 
-    .stats .parameter {
-        font-size: 12px;
-        font-weight: 400;
-    }
+.stats .parameter {
+    font-size: 12px;
+    font-weight: 400;
+}
+
 
 /*PROFİLE KARTI*/
+
 
 /* Table Styles */
 
@@ -182,34 +185,35 @@
     background-color: white;
 }
 
-    .fl-table td,
-    .fl-table th {
-        text-align: center;
-        padding: 8px;
-    }
+.fl-table td,
+.fl-table th {
+    text-align: center;
+    padding: 8px;
+}
 
-    .fl-table td {
-        border-right: 1px solid #f8f8f8;
-        font-size: 16px;
-        width: 1px;
-        white-space: nowrap;
-    }
+.fl-table td {
+    border-right: 1px solid #f8f8f8;
+    font-size: 16px;
+    width: 1px;
+    white-space: nowrap;
+}
 
-    .fl-table thead th {
-        color: #ffffff;
-        background: #4FC3A1;
-        width: 1px;
-        white-space: nowrap;
-    }
+.fl-table thead th {
+    color: #ffffff;
+    background: #4FC3A1;
+    width: 1px;
+    white-space: nowrap;
+}
 
-        .fl-table thead th:nth-child(odd) {
-            color: #ffffff;
-            background: #324960;
-        }
+.fl-table thead th:nth-child(odd) {
+    color: #ffffff;
+    background: #324960;
+}
 
-    .fl-table tr:nth-child(even) {
-        background: #F8F8F8;
-    }
+.fl-table tr:nth-child(even) {
+    background: #F8F8F8;
+}
+
 
 /* Responsive */
 
@@ -218,7 +222,6 @@
         display: block;
         width: 100%;
     }
-
     .table-wrapper:before {
         content: "Scroll horizontally >";
         display: block;
@@ -227,27 +230,22 @@
         color: white;
         padding: 0 0 10px;
     }
-
     .fl-table thead,
     .fl-table tbody,
     .fl-table thead th {
         display: block;
     }
-
-        .fl-table thead th:last-child {
-            border-bottom: none;
-        }
-
+    .fl-table thead th:last-child {
+        border-bottom: none;
+    }
     .fl-table thead {
         float: left;
     }
-
     .fl-table tbody {
         width: auto;
         position: relative;
         overflow-x: auto;
     }
-
     .fl-table td,
     .fl-table th {
         padding: 20px .625em .625em .625em;
@@ -260,33 +258,26 @@
         font-size: 13px;
         text-overflow: ellipsis;
     }
-
     .fl-table thead th {
         text-align: left;
         border-bottom: 1px solid #f7f7f9;
     }
-
     .fl-table tbody tr {
         display: table-cell;
     }
-
-        .fl-table tbody tr:nth-child(odd) {
-            background: none;
-        }
-
+    .fl-table tbody tr:nth-child(odd) {
+        background: none;
+    }
     .fl-table tr:nth-child(even) {
         background: transparent;
     }
-
     .fl-table tr td:nth-child(odd) {
         background: #F8F8F8;
         border-right: 1px solid #E6E4E4;
     }
-
     .fl-table tr td:nth-child(even) {
         border-right: 1px solid #E6E4E4;
     }
-
     .fl-table tbody td {
         display: block;
         text-align: center;
@@ -300,7 +291,9 @@
     margin-bottom: 10px;
 }
 
+
 /*TABLE*/
+
 .metinkaydir {
     white-space: pre-wrap;
     overflow: hidden;
@@ -321,11 +314,11 @@ p.product a {
     position: relative;
 }
 
-    p.product a .gizli {
-        max-width: 400px;
-        width: 400px;
-        height: 400px;
-    }
+p.product a .gizli {
+    max-width: 400px;
+    width: 400px;
+    height: 400px;
+}
 
 #username {
     text-decoration: none;
@@ -333,10 +326,10 @@ p.product a {
     font-weight: lighter;
 }
 
-    #username:hover {
-        color: gray;
-        font-weight: 700;
-    }
+#username:hover {
+    color: gray;
+    font-weight: 700;
+}
 
 .dt-buttons.field.is-grouped {
     margin-bottom: 5px;
@@ -349,10 +342,10 @@ p.product a {
     color: white !important;
 }
 
-    .tablobutonlar:hover {
-        background-color: #323260 !important;
-        color: white !important;
-    }
+.tablobutonlar:hover {
+    background-color: #323260 !important;
+    color: white !important;
+}
 
 #DataTables_Table_0_wrapper .column {
     display: block !important;
@@ -362,7 +355,9 @@ p.product a {
     /* padding: .75rem; */
 }
 
+
 /*SOL MENU BAR*/
+
 html {
     /* set space for menu to appear, or everything in html will covered 75px by menu  */
     margin-left: 75px;
@@ -390,9 +385,10 @@ html {
     transition: background 0.3s;
 }
 
-    .menu__item > i {
-        font-size: 2.2em; /* 2.2*16px */
-    }
+.menu__item>i {
+    font-size: 2.2em;
+    /* 2.2*16px */
+}
 
 .menu__item--active {
     color: #000000;
@@ -403,7 +399,9 @@ html {
     background: #dddddd;
 }
 
+
 /* create tooltip after each menu item  */
+
 .menu__item::after {
     position: absolute;
     display: inline-block;
@@ -424,13 +422,16 @@ html {
     transition: opacity 1s;
 }
 
+
 /* show tooltip if hover on menu item */
+
 .menu__item:hover::after {
     opacity: 1;
     visibility: visible;
 }
 
-table td, table th {
+table td,
+table th {
     text-align: center !important;
     vertical-align: middle !important;
 }
@@ -461,9 +462,12 @@ table td, table th {
     margin-left: 5px;
 }
 
+
 /*NAVBAR*/
 
+
 /* NAVIGATION */
+
 nav {
     width: 80%;
     margin: 0 auto;
@@ -472,76 +476,81 @@ nav {
     box-shadow: 0px 5px 0px #dedede;
 }
 
-    /* By Dominik Biedebach @domobch */
-    nav ul {
-        list-style: none;
-        text-align: center;
-    }
 
-        nav ul li {
-            display: inline-block;
-        }
+/* By Dominik Biedebach @domobch */
 
-            nav ul li a {
-                display: block;
-                padding: 15px;
-                text-decoration: none;
-                color: #aaa;
-                font-weight: 800;
-                text-transform: uppercase;
-                margin: 0 10px;
-            }
+nav ul {
+    list-style: none;
+    text-align: center;
+}
 
-                nav ul li a,
-                nav ul li a:after,
-                nav ul li a:before {
-                    transition: all .5s;
-                }
+nav ul li {
+    display: inline-block;
+}
 
-                    nav ul li a:hover {
-                        color: #555;
-                    }
+nav ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #aaa;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 10px;
+}
 
-    /* By Dominik Biedebach @domobch */
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
+    transition: all .5s;
+}
 
-    /* Blend */
-    nav.blend ul li a {
-        position: relative;
-        border-radius: 5px;
-        overflow: hidden;
-        z-index: 1;
-    }
+nav ul li a:hover {
+    color: #555;
+}
 
-        nav.blend ul li a:hover {
-            color: #fff;
-            text-decoration: none;
-        }
 
-        nav.blend ul li a:before,
-        nav.blend ul li a:after {
-            position: absolute;
-            width: 0px;
-            height: 100%;
-            top: 0;
-            bottom: 0;
-            background: #324960;
-            transition: all .5s;
-            margin: auto;
-            content: '.';
-            color: transparent;
-            z-index: -1;
-            opacity: 0.75;
-        }
+/* By Dominik Biedebach @domobch */
 
-        nav.blend ul li a:before {
-            left: 0;
-        }
 
-        nav.blend ul li a:after {
-            right: 0;
-        }
+/* Blend */
 
-        nav.blend ul li a:hover:after,
-        nav.blend ul li a:hover:before {
-            width: 100%;
-        }
+nav.blend ul li a {
+    position: relative;
+    border-radius: 5px;
+    overflow: hidden;
+    z-index: 1;
+}
+
+nav.blend ul li a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+nav.blend ul li a:before,
+nav.blend ul li a:after {
+    position: absolute;
+    width: 0px;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    background: #324960;
+    transition: all .5s;
+    margin: auto;
+    content: '.';
+    color: transparent;
+    z-index: -1;
+    opacity: 0.75;
+}
+
+nav.blend ul li a:before {
+    left: 0;
+}
+
+nav.blend ul li a:after {
+    right: 0;
+}
+
+nav.blend ul li a:hover:after,
+nav.blend ul li a:hover:before {
+    width: 100%;
+}
