--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,25 +20,25 @@
         <table class="fl-table" style="font-size:12px; font-weight:600;">
             <thead>
                 <tr>
-                    <th>Count</th>
+                    <th class="kucuk">Count</th>
                     <th>Fotoğraf</th>
-                    <th>Cinsiyet</th>
+                    <th class="orta">Cinsiyet</th>
                     <th>Bio</th>
                     @if (!ViewBag.sutunGizle)
                     {
-                        <th>Konum</th>
-                        <th>Takipçi</th>
-                        <th>Takip<br />Edilen</th>
-                        <th>Kayıt<br />Tarihi</th>
-                        <th>Tweet</th>
-                        <th>Son<br />Tweet</th>
-                        <th>Ortalama<br />Tweet</th>
-                        <th>Beğeni</th>
-                        <th>Son<br />Beğeni</th>
-                        <th>Ortalama<br />Beğeni</th>
+                        <th class="orta">Konum</th>
+                        <th class="kucuk">Takipçi</th>
+                        <th class="kucuk">Takip<br />Edilen</th>
+                        <th class="kucuk">Kayıt<br />Tarihi</th>
+                        <th class="kucuk">Tweet</th>
+                        <th class="kucuk">Son<br />Tweet</th>
+                        <th class="kucuk">Ortalama<br />Tweet</th>
+                        <th class="kucuk">Beğeni</th>
+                        <th class="kucuk">Son<br />Beğeni</th>
+                        <th class="kucuk"> Ortalama<br />Beğeni</th>
                     }
-                    <th>Takipçi<br />Durumu</th>
-                    <th>Takip<br />Durumu</th>
+                    <th class="orta">Takipçi<br />Durumu</th>
+                    <th class="orta">Takip<br />Durumu</th>
                 </tr>
             </thead>
             <tbody>
