--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,22 +14,22 @@
     <script src="~/js/signalr.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript"
-        src="https://cdn.datatables.net/v/bm/dt-1.11.3/b-2.0.1/b-colvis-2.0.1/cr-1.5.4/fh-3.2.0/r-2.2.9/sb-1.2.2/sp-1.4.0/sl-1.3.3/datatables.min.js"></script>
+            src="https://cdn.datatables.net/v/bm/dt-1.11.3/b-2.0.1/b-colvis-2.0.1/cr-1.5.4/fh-3.2.0/r-2.2.9/sb-1.2.2/sp-1.4.0/sl-1.3.3/datatables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js"
-        integrity="sha512-DedNBWPF0hLGUPNbCYfj8qjlEnNE92Fqn7xd3Sscfu7ipy7Zu33unHdugqRD3c4Vj7/yLv+slqZhMls/4Oc7Zg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            integrity="sha512-DedNBWPF0hLGUPNbCYfj8qjlEnNE92Fqn7xd3Sscfu7ipy7Zu33unHdugqRD3c4Vj7/yLv+slqZhMls/4Oc7Zg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.2/css/bulma.min.css" />
+          href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.2/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css"
-        href="https://cdn.datatables.net/v/bm/dt-1.11.3/b-2.0.1/b-colvis-2.0.1/cr-1.5.4/fh-3.2.0/r-2.2.9/sb-1.2.2/sp-1.4.0/sl-1.3.3/datatables.min.css" />
+          href="https://cdn.datatables.net/v/bm/dt-1.11.3/b-2.0.1/b-colvis-2.0.1/cr-1.5.4/fh-3.2.0/r-2.2.9/sb-1.2.2/sp-1.4.0/sl-1.3.3/datatables.min.css" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="~/css/site.css" />
@@ -77,16 +77,16 @@
                                 <div class="image">
                                     <div class="circle-1"></div>
                                     <div class="circle-2"></div>
-                                    <img src="@Hesap.Instance.OturumBilgileri.PhotoURL" width="70" height="70"
-                                         alt="@Hesap.Instance.OturumBilgileri.Username">
+                                    <img src="@Hesap.Ins.OturumBilgileri.PhotoURL" width="70" height="70"
+                                         alt="@Hesap.Ins.OturumBilgileri.Username">
                                 </div>
 
-                                <div class="name">@Hesap.Instance.OturumBilgileri.Name</div>
+                                <div class="name">@Hesap.Ins.OturumBilgileri.Name</div>
                                 <div class="job">
                                     <a id="username"
-                                       href="https://twitter.com/@Hesap.Instance.OturumBilgileri.Username"
+                                       href="https://twitter.com/@Hesap.Ins.OturumBilgileri.Username"
                                        target="_blank">
-                                        <i class="bi bi-link-45deg">@Hesap.Instance.OturumBilgileri.Username</i>
+                                        <i class="bi bi-link-45deg">@Hesap.Ins.OturumBilgileri.Username</i>
                                     </a>
                                 </div>
                             </div>
@@ -94,44 +94,44 @@
                         <div class="col" style=" display: flex; justify-content: center; align-items: center;">
                             <div class="stats">
                                 <div class="box">
-                                    <span class="value">@Hesap.Instance.OturumBilgileri.Followers</span>
+                                    <span class="value">@Hesap.Ins.OturumBilgileri.Followers</span>
                                     <span class="parameter">Takipçi Sayısı</span>
                                 </div>
                                 <div class="box">
-                                    <span class="value">@Hesap.Instance.OturumBilgileri.Following</span>
+                                    <span class="value">@Hesap.Ins.OturumBilgileri.Following</span>
                                     <span class="parameter">Takip Edilen</span>
                                 </div>
                                 <div class="box">
-                                    <span class="value">@Hesap.Instance.OturumBilgileri.LastLikesDate</span>
+                                    <span class="value">@Hesap.Ins.OturumBilgileri.LastLikesDate</span>
                                     <span class="parameter">Son Beğeni</span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Instance.OturumBilgileri.LastTweetsDate</span>
+                                    <span class="value">@Hesap.Ins.OturumBilgileri.LastTweetsDate</span>
                                     <span class="parameter">Son Tweet</span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Instance.OturumBilgileri.BegeniSikligi</span>
+                                    <span class="value">@Hesap.Ins.OturumBilgileri.BegeniSikligi</span>
                                     <span class="parameter">Beğeni Sıklığı</span>
                                 </div>
                                 <div class="box">
-                                    <span class="value">@Hesap.Instance.OturumBilgileri.TweetSikligi</span>
+                                    <span class="value">@Hesap.Ins.OturumBilgileri.TweetSikligi</span>
                                     <span class="parameter">Tweet Sıklığı<br /></span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Instance.OturumBilgileri.Date</span>
+                                    <span class="value">@Hesap.Ins.OturumBilgileri.Date</span>
                                     <span class="parameter">Üyelik Süresi</span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Instance.OturumBilgileri.TweetCount</span>
+                                    <span class="value">@Hesap.Ins.OturumBilgileri.TweetCount</span>
                                     <span class="parameter">Tweet Sayısı</span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Instance.OturumBilgileri.LikeCount</span>
+                                    <span class="value">@Hesap.Ins.OturumBilgileri.LikeCount</span>
                                     <span class="parameter">Beğeni Sayısı</span>
                                 </div>
                             </div>
@@ -170,23 +170,23 @@
         <div class="row"> @RenderBody()</div>
     </div>
     <nav class="menu">
-        <a href="@Url.ActionLink("Index", "Home")" class="menu__item" data-tooltip="Dashboard">
+        <a href="@Url.ActionLink("Index", "Home")" class="menu__item" data-tooltip="Ana Sayfa">
             <i class="bi bi-house-door-fill" style="color: #324060"></i>
         </a>
         <a href="@Url.ActionLink("ListGetir", "Home", new {
-            username = Hesap.Instance.OturumBilgileri.Username,
+            username = Hesap.Ins.OturumBilgileri.Username,
             listName = "following"
             })" class="menu__item" id="takipciler" data-tooltip="Takip Edilenler">
             <i class="bi bi-people-fill" style="color: #324060"></i>
         </a>
         <a href="@Url.ActionLink("ListGetir", "Home",new {
-            username = Hesap.Instance.OturumBilgileri.Username,
+            username = Hesap.Ins.OturumBilgileri.Username,
             listName = "followers"
             })" class="menu__item" id="listGetir" data-tooltip="Takipçiler">
             <i class="bi bi-person-lines-fill" style="color: #324060"></i>
         </a>
-        <a href="@Url.ActionLink("BegenenenleriGetir", "Home",new {
-            username = Hesap.Instance.OturumBilgileri.Username
+        <a href="@Url.ActionLink("BegenenleriGetir", "Home",new {
+            username = Hesap.Ins.OturumBilgileri.Username
             })" class="menu__item" id="begeniGetir" data-tooltip="Beğenenleri Getir">
             <i class="bi bi-person-lines-fill" style="color: #324060"></i>
         </a>
@@ -204,8 +204,6 @@
                         style="position: absolute; width: 100%; height: 100%; bottom: 0px; color: #324060;" type="button"
                         id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" data-tooltip="Settings">
                 </button>
-
-
 
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width:250px;">
                     <li style="width: 100%;">
@@ -239,11 +237,12 @@
                             Ortak takipçiler
                         </button>
                     </li>
+
                     <li style="width: 100%;">
-                        <button class="dropdown-item btn btn-outline-danger" type="submit" name="listName" value="">
+                        <a class="dropdown-item btn btn-outline-danger" href="@Url.ActionLink("BegenenenleriGetir", "Home")" type="submit">
                             <i class="bi bi-people-fill" style="color: #324060"></i>
                             Beğenenleri
-                        </button>
+                        </a>
                     </li>
                 </ul>
             </div>
